# skypro_27_31

./: .gitignore  Dockerfile  converter.py  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytests.ini  requirements.txt
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views_ad.py  views_ads.py  views_category.py  views_selection.py  views_users.py  viewset_locations.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py  0004_rename_compilation_selection_items.py  0005_alter_selection_owner.py
ads/permissions/: permissions.py
ads/serializers/: ad.py  category.py  selection.py
ads/validators/: ad.py
ads/views/: ad.py  category.py  selection.py
authentication/: admin.py  models.py  serializers.py  urls.py  views_user.py  viewset_location.py
authentication/migrations/: 0001_initial.py  0002_alter_user_age.py
authentication/serializers/: location.py  user.py
authentication/validators/: user.py
authentication/views/: user.py  viewset_location.py
data_csv/: user.csv
data_json/: ads.json  locations.json  users.json
skypro_home_work_27_31/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
