[tool.poetry]
name = "skypro-home-work-27-31"
version = "0.1.0"
description = ""
authors = ["shurxet"]
readme = "README.md"
packages = [{include = "skypro_home_work_27_31"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-dateutil = "^2.8.2"
django-pytest = "^0.2.0"
pytest-factoryboy = "^2.5.1"
pytest-django = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
